# travel_agent_ai

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/travel_agent_ai/: crew.py  main.py
travel_plan/: Kerala_travel_plan.md  bangkok_2025_05_10_travel_plan.md  delhi_2025-05-12_travel_plan.md  guwahati_2025-04-20_travel_plan.md  jaipur_2025_travel_plan.md  kerala_2025_04_12_travel_plan.md
