[project]
name = "travel_agent_ai"
version = "0.1.0"
description = "travel_agent_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
travel_agent_ai = "travel_agent_ai.main:run"
run_crew = "travel_agent_ai.main:run"
train = "travel_agent_ai.main:train"
replay = "travel_agent_ai.main:replay"
test = "travel_agent_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
